--- a/index.html
+++ b/index.html
@@ -3,9 +3,184 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homework number 2</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Спочатку нормалізатор -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <!--<link rel="stylesheet" href="./css/modern-normalize.css" />-->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <h1>This is an example project</h1>
+    <header>
+      <nav>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-name">Studio</span></a
+        >
+        <ul class="nav-links">
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <address class="address-main">
+        <ul class="address-links">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+
+    <main>
+      <section class="section-main">
+        <h1 class="section-main-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button class="btn-section-main" type="button">Order Service</button>
+      </section>
+
+      <section class="section-two">
+        <h2>Benefits</h2>
+        <ul class="section-two-list">
+          <li>
+            <h3 class="section-title">Strategy</h3>
+            <p class="section-paragraph">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+
+          <li>
+            <h3 class="section-title">Punctuality</h3>
+            <p class="section-paragraph">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+
+          <li>
+            <h3 class="section-title">Diligence</h3>
+            <p class="section-paragraph">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="section-title">Technologies</h3>
+            <p class="section-paragraph">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="section-three">
+        <h2 class="section-three-title">Our Team</h2>
+        <ul>
+          <li class="section-three-list">
+            <img
+              src="./images/mark.jpg"
+              alt="photo Marc Guerrero"
+              width="264"
+            />
+            <h3 class="section-title">Mark Guerrero</h3>
+            <p class="section-par">Product Designer</p>
+          </li>
+          <li class="section-three-list">
+            <img src="./images/tom.jpg" alt="photo Tom Ford" width="264" />
+            <h3 class="section-title">Tom Ford</h3>
+            <p class="section-par">Frontend Developer</p>
+          </li>
+          <li class="section-three-list">
+            <img
+              src="./images/camila.jpg"
+              alt="photo Camila Garcia"
+              width="264"
+            />
+            <h3 class="section-title">Camila Garcia</h3>
+            <p class="section-par">Marketing</p>
+          </li>
+          <li class="section-three-list">
+            <img
+              src="./images/daniel.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+            />
+            <h3 class="section-title">Daniel Wilson</h3>
+            <p class="section-par">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="section-four">
+        <h2 class="section-four-title">Our Portfolio</h2>
+        <ul>
+          <li class="section-four-list">
+            <img src="./images/banking.jpg" alt="banking app" width="360" />
+            <h3 class="section-title">Banking App</h3>
+            <p class="section-par">App</p>
+          </li>
+          <li class="section-four-list">
+            <img src="./images/cashless.jpg" alt="mobile pnone" width="360" />
+            <h3 class="section-title">Cashless Payment</h3>
+            <p class="section-par">Marketing</p>
+          </li>
+          <li class="section-four-list">
+            <img src="./images/meditation.jpg" alt="laptop" width="360" />
+            <h3 class="section-title">Meditation App</h3>
+            <p class="section-par">App</p>
+          </li>
+          <li class="section-four-list">
+            <img src="./images/taxi.jpg" alt="taxi car" width="360" />
+            <h3 class="section-title">Taxi Service</h3>
+            <p class="section-par">Marketing</p>
+          </li>
+          <li class="section-four-list">
+            <img
+              src="./images/screenmobile.jpg"
+              alt="screen mobile"
+              width="360"
+            />
+            <h3 class="section-title">Screen Illustrations</h3>
+            <p class="section-par">Design</p>
+          </li>
+          <li class="section-four-list">
+            <img
+              src="./images/girl-learning.jpg"
+              alt="girl learning"
+              width="360"
+            />
+            <h3 class="section-title">Online Courses</h3>
+            <p class="section-par">Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="footer-main">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-footer-name">Studio</span></a
+      >
+
+      <p class="footer-par">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
