add style haeder

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="the-header">
       <div class="container">
         <div class="header-page">
-          <nav>
+          <nav class="navigation">
             <a class="logo" href="./index.html"
               >Web<span class="logo-name">Studio</span></a
             >
