--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <section class="section-two">
         <div class="container">
-          <h2 class="hidden-h2">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="section-two-list">
             <li>
               <h3 class="section-title">Strategy</h3>
