--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <!--Header section-->
     <header class="the-header">
       <div class="container">
         <div class="header-page">
@@ -52,45 +53,44 @@
     </header>
 
     <main>
-      <section class="section-main">
+      <!--Hero section-->
+      <section class="hero">
         <div class="container">
-          <h1 class="section-main-title">
-            Effective Solutions for Your Business
-          </h1>
-          <button class="btn-section-main" type="button">Order Service</button>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
-
-      <section class="section-two">
+      <!--Benefits section-->
+      <section class="benefits">
         <div class="container">
-          <h2 class="visually-hidden">Benefits</h2>
-          <ul class="section-two-list">
-            <li>
-              <h3 class="section-title">Strategy</h3>
-              <p class="section-paragraph">
+          <h2 class="benefits-title">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Strategy</h3>
+              <p class="benefits-par">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
 
-            <li>
-              <h3 class="section-title">Punctuality</h3>
-              <p class="section-paragraph">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Punctuality</h3>
+              <p class="benefits-par">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
 
-            <li>
-              <h3 class="section-title">Diligence</h3>
-              <p class="section-paragraph">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Diligence</h3>
+              <p class="benefits-par">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
-              <h3 class="section-title">Technologies</h3>
-              <p class="section-paragraph">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Technologies</h3>
+              <p class="benefits-par">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -98,88 +98,120 @@
           </ul>
         </div>
       </section>
-      <section class="section-three">
-        <h2 class="section-three-title">Our Team</h2>
-        <ul>
-          <li class="section-three-list">
+      <!--Section Our Team-->
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/mark.jpg"
               alt="photo Marc Guerrero"
               width="264"
             />
-            <h3 class="section-title">Mark Guerrero</h3>
-            <p class="section-par">Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-par">Product Designer</p>
           </li>
-          <li class="section-three-list">
-            <img src="./images/tom.jpg" alt="photo Tom Ford" width="264" />
-            <h3 class="section-title">Tom Ford</h3>
-            <p class="section-par">Frontend Developer</p>
-          </li>
-          <li class="section-three-list">
+          <li class="team-item">
             <img
+              class="team-img"
+              src="./images/tom.jpg"
+              alt="photo Tom Ford"
+              width="264"
+            />
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-par">Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img
+              class="team-img"
               src="./images/camila.jpg"
               alt="photo Camila Garcia"
               width="264"
             />
-            <h3 class="section-title">Camila Garcia</h3>
-            <p class="section-par">Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-par">Marketing</p>
           </li>
-          <li class="section-three-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/daniel.jpg"
               alt="photo Daniel Wilson"
               width="264"
             />
-            <h3 class="section-title">Daniel Wilson</h3>
-            <p class="section-par">UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-par">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section class="section-four">
-        <h2 class="section-four-title">Our Portfolio</h2>
+      <!--Section Portfolio-->
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
-          <li class="section-four-list">
-            <img src="./images/banking.jpg" alt="banking app" width="360" />
-            <h3 class="section-title">Banking App</h3>
-            <p class="section-par">App</p>
-          </li>
-          <li class="section-four-list">
-            <img src="./images/cashless.jpg" alt="mobile pnone" width="360" />
-            <h3 class="section-title">Cashless Payment</h3>
-            <p class="section-par">Marketing</p>
-          </li>
-          <li class="section-four-list">
-            <img src="./images/meditation.jpg" alt="laptop" width="360" />
-            <h3 class="section-title">Meditation App</h3>
-            <p class="section-par">App</p>
-          </li>
-          <li class="section-four-list">
-            <img src="./images/taxi.jpg" alt="taxi car" width="360" />
-            <h3 class="section-title">Taxi Service</h3>
-            <p class="section-par">Marketing</p>
-          </li>
-          <li class="section-four-list">
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
+              src="./images/banking.jpg"
+              alt="banking app"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-par">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/cashless.jpg"
+              alt="mobile pnone"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-par">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/meditation.jpg"
+              alt="laptop"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-par">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/taxi.jpg"
+              alt="taxi car"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-par">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
               src="./images/screenmobile.jpg"
               alt="screen mobile"
               width="360"
             />
-            <h3 class="section-title">Screen Illustrations</h3>
-            <p class="section-par">Design</p>
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-par">Design</p>
           </li>
-          <li class="section-four-list">
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/girl-learning.jpg"
               alt="girl learning"
               width="360"
             />
-            <h3 class="section-title">Online Courses</h3>
-            <p class="section-par">Marketing</p>
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-par">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-
+    <!--Footer section-->
     <footer class="footer-main">
       <a class="logo-footer" href="./index.html"
         >Web<span class="logo-footer-name">Studio</span></a
