--- a/index.html
+++ b/index.html
@@ -4,47 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework number 3</title>
-
+    <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <!-- Спочатку нормалізатор -->
+    <!--Normalize-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
+    <!--Custom Styles-->
     <!--<link rel="stylesheet" href="./css/modern-normalize.css" />-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Header section-->
-    <header class="the-header">
+    <header class="header">
       <div class="container">
         <div class="header-page">
-          <nav class="navigation">
-            <a class="logo" href="./index.html"
-              >Web<span class="logo-name">Studio</span></a
+          <nav class="nav">
+            <a class="nav-logo" href="./index.html"
+              >Web<span class="nav-name">Studio</span></a
             >
-            <ul class="nav-links">
-              <li><a class="link" href="./index.html">Studio</a></li>
-              <li><a class="link" href="">Portfolio</a></li>
-              <li><a class="link" href="">Contacts</a></li>
+            <ul class="nav-list">
+              <li><a class="nav-item" href="./index.html">Studio</a></li>
+              <li><a class="nav-item" href="">Portfolio</a></li>
+              <li><a class="nav-item" href="">Contacts</a></li>
             </ul>
           </nav>
         </div>
 
-        <address class="address-main">
-          <ul class="address-links">
-            <li>
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-address-item">
               <a class="link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="header-address-item">
               <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
@@ -63,11 +64,11 @@
       <!--Benefits section-->
       <section class="benefits">
         <div class="container">
-          <h2 class="benefits-title">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-subtitle">Strategy</h3>
-              <p class="benefits-par">
+              <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -75,7 +76,7 @@
 
             <li class="benefits-item">
               <h3 class="benefits-subtitle">Punctuality</h3>
-              <p class="benefits-par">
+              <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -83,14 +84,14 @@
 
             <li class="benefits-item">
               <h3 class="benefits-subtitle">Diligence</h3>
-              <p class="benefits-par">
+              <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="benefits-item">
               <h3 class="benefits-subtitle">Technologies</h3>
-              <p class="benefits-par">
+              <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -110,7 +111,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-par">Product Designer</p>
+            <p class="team-text">Product Designer</p>
           </li>
           <li class="team-item">
             <img
@@ -120,7 +121,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-par">Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -130,7 +131,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-par">Marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -140,7 +141,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-par">UI Designer</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -156,7 +157,7 @@
               width="360"
             />
             <h3 class="portfolio-subtitle">Banking App</h3>
-            <p class="portfolio-par">App</p>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -166,7 +167,7 @@
               width="360"
             />
             <h3 class="portfolio-subtitle">Cashless Payment</h3>
-            <p class="portfolio-par">Marketing</p>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -176,7 +177,7 @@
               width="360"
             />
             <h3 class="portfolio-subtitle">Meditation App</h3>
-            <p class="portfolio-par">App</p>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -186,7 +187,7 @@
               width="360"
             />
             <h3 class="portfolio-subtitle">Taxi Service</h3>
-            <p class="portfolio-par">Marketing</p>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -196,7 +197,7 @@
               width="360"
             />
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-            <p class="portfolio-par">Design</p>
+            <p class="portfolio-text">Design</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -206,18 +207,18 @@
               width="360"
             />
             <h3 class="portfolio-subtitle">Online Courses</h3>
-            <p class="portfolio-par">Marketing</p>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer section-->
-    <footer class="footer-main">
-      <a class="logo-footer" href="./index.html"
-        >Web<span class="logo-footer-name">Studio</span></a
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-name">Studio</span></a
       >
 
-      <p class="footer-par">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
