--- a/index.html
+++ b/index.html
@@ -99,49 +99,51 @@
       </section>
       <!--Section Our Team-->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/mark.jpg"
-              alt="photo Marc Guerrero"
-              width="264"
-            />
-            <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/tom.jpg"
-              alt="photo Tom Ford"
-              width="264"
-            />
-            <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/camila.jpg"
-              alt="photo Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/daniel.jpg"
-              alt="photo Daniel Wilson"
-              width="264"
-            />
-            <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/mark.jpg"
+                alt="photo Marc Guerrero"
+                width="264"
+              />
+              <h3 class="team-subtitle">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/tom.jpg"
+                alt="photo Tom Ford"
+                width="264"
+              />
+              <h3 class="team-subtitle">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/camila.jpg"
+                alt="photo Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-subtitle">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/daniel.jpg"
+                alt="photo Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-subtitle">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Section Portfolio-->
       <section class="portfolio">
