--- a/index.html
+++ b/index.html
@@ -236,14 +236,16 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-name">Studio</span></a
-      >
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-name">Studio</span></a
+        >
 
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
