--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 alt="banking app"
                 width="360"
               />
-              <div class="container">
+              <div class="container-item">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
@@ -177,7 +177,7 @@
                 alt="mobile pnone"
                 width="360"
               />
-              <div class="container">
+              <div class="container-item">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
@@ -189,7 +189,7 @@
                 alt="laptop"
                 width="360"
               />
-              <div class="container">
+              <div class="container-item">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
@@ -201,7 +201,7 @@
                 alt="taxi car"
                 width="360"
               />
-              <div class="container">
+              <div class="container-item">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
@@ -213,7 +213,7 @@
                 alt="screen mobile"
                 width="360"
               />
-              <div class="container">
+              <div class="container-item">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
@@ -225,7 +225,7 @@
                 alt="girl learning"
                 width="360"
               />
-              <div class="container">
+              <div class="container-item">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
