edit troubles in hw3

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 alt="photo Marc Guerrero"
                 width="264"
               />
-              <div class="container">
+              <div class="team-content">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
@@ -121,7 +121,7 @@
                 alt="photo Tom Ford"
                 width="264"
               />
-              <div class="container">
+              <div class="team-content">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
@@ -133,7 +133,7 @@
                 alt="photo Camila Garcia"
                 width="264"
               />
-              <div class="container">
+              <div class="team-content">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
@@ -145,7 +145,7 @@
                 alt="photo Daniel Wilson"
                 width="264"
               />
-              <div class="container">
+              <div class="team-content">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
@@ -165,7 +165,7 @@
                 alt="banking app"
                 width="360"
               />
-              <div class="container-item">
+              <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
@@ -177,7 +177,7 @@
                 alt="mobile pnone"
                 width="360"
               />
-              <div class="container-item">
+              <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
@@ -189,7 +189,7 @@
                 alt="laptop"
                 width="360"
               />
-              <div class="container-item">
+              <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
@@ -201,7 +201,7 @@
                 alt="taxi car"
                 width="360"
               />
-              <div class="container-item">
+              <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
@@ -213,7 +213,7 @@
                 alt="screen mobile"
                 width="360"
               />
-              <div class="container-item">
+              <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
@@ -225,7 +225,7 @@
                 alt="girl learning"
                 width="360"
               />
-              <div class="container-item">
+              <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
